--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -3,8 +3,13 @@
 <h1>Bookings for <%= @house.name %></h1>
 
 <ul id="list">
-  <% @house.bookings.sort_by(&:day).each do |booking| %>
-    <li><%= booking.day %></li>
-  <% end %>
+<% @bookings_list.each do |booking| %>
+  <li><%= booking.day %></li>
+<% end %>
 </ul>
+<% if params[:order] == "asc" %>
+  <%= link_to "Change order", house_path(@house, :order=>"desc")%>
+<% else %>
+  <%= link_to "Change order", house_path(@house, :order=>"asc")%>
+<% end %>
 
