--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -11,6 +11,7 @@
 </p>
 
 <h2>The full list of bookings:</h2>
+
 <div class='bookings'>
   <% if @bookings.any? %>
     <%= render partial: 'bookings/booking', collection: @bookings %>
@@ -18,3 +19,15 @@
     There is no booking yet.
   <% end %>
 </div>
+
+
+<div class="pagination-options">
+  <%= form_tag bookings_path, method: :get do %>
+    <%= select_tag :per_page, options_for_select([4, 6, 8, 12, 20], params[:per_page]), onchange: "this.form.submit()" %>
+  <% end %>
+</div>
+
+<div class="flickr_pagination">
+  
+    <%= will_paginate :container => true %>
+  </div>
