hash syntax fixed

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -29,5 +29,5 @@
 
 <div class="flickr_pagination">
   
-    <%= will_paginate :container => true %>
+    <%= will_paginate container: true %>
   </div>
