--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,34 +50,54 @@
 .flickr_pagination {
   text-align: center;
   padding: 0.3em;
-  cursor: default; }
-  .flickr_pagination .pagination li {
-    display: inline-block;
-    margin: 0 10px;
-  }
+  cursor: default;
+}
+
+.flickr_pagination .pagination li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
 .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
-  padding: 0.2em 0.5em; }
+  padding: 0.2em 0.5em;
+}
+
 .flickr_pagination .disabled {
-  color: #aaaaaa; }
+  color: #aaaaaa;
+}
+
 .flickr_pagination .current {
   font-style: normal;
   font-weight: bold;
-  color: #ff0084; }
+  color: #ff0084;
+}
+
 .flickr_pagination a {
   border: 1px solid #dddddd;
   color: #0063dc;
-  text-decoration: none; }
-  .flickr_pagination a:hover, .flickr_pagination a:focus {
-    border-color: #003366;
-    background: #0063dc;
-    color: white; }
+  text-decoration: none;
+}
+
+.flickr_pagination a:hover, .flickr_pagination a:focus {
+  border-color: #003366;
+  background: #0063dc;
+  color: white;
+}
+
 .flickr_pagination .page_info {
   color: #aaaaaa;
-  padding-top: 0.8em; }
+  padding-top: 0.8em;
+}
+
 .flickr_pagination .previous_page, .flickr_pagination .next_page {
-  border-width: 2px; }
+  border-width: 2px;
+}
+
 .flickr_pagination .previous_page {
-  margin-right: 1em; }
+  margin-right: 1em;
+}
+
 .flickr_pagination .next_page {
-  margin-left: 1em; }
+  margin-left: 1em; 
+}
 
