--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -3,6 +3,6 @@
     <%= booking.day %>
   </div>
   <div class="booking-house">
-    <%= link_to booking.house.name, house_path(bookng.house_id) %>
+    <%= link_to booking.house.name, house_path(booking.house_id) %>
   </div>
 </div>
